--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "update": "git add . && git commit -m \"Update\" && git push origin main && npm run deploy"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "glob": "^13.0.0",
     "vite": "^7.2.2",
     "vite-plugin-html-inject": "^1.1.2"
