--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
+
     "update": "git add . && git commit -m \"Update\" && git push origin main && npm run deploy"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0",
+    "glob": "^13.0.0",
     "vite": "^7.2.2",
-    "vite-plugin-html": "^3.2.2",
-    "vite-plugin-html-inject": "^1.1.2"
+    "vite-plugin-html-inject": "^1.1.2",
+    "gh-pages": "^6.3.0"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1"
+    "@google/generative-ai": "^0.24.1",
+    "vite-plugin-full-reload": "^1.2.0"
   }
 }
