--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,scss,html}\"",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "update": "git add . && git commit -m \"Update\" && git push origin main && npm run deploy"
+    
+    
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.1",
