--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "update": "git add . && git commit -m \"Update\" && git push origin main && npm run deploy"
+    "update": "git add . && git commit -m \"Update\" || echo \"No changes\" && git push origin main && npm run deploy"
     
     
   },
